unpackaged/main/default/objects/Account/fields/Back_Pro_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Back_Pro_Confirm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Back Pro Confirm</label>
    <type>Checkbox</type>
</CustomField>