unpackaged/main/default/objects/Account/fields/Back_Propogate__c.field-meta.xml
<CustomField>
    <fullName>Back_Propogate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Back Propogate</label>
    <type>Checkbox</type>
</CustomField>