unpackaged/main/default/objects/Account/fields/Customer_Offboarded__c.field-meta.xml
<CustomField>
    <fullName>Customer_Offboarded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Offboarded</label>
    <type>Checkbox</type>
</CustomField>