unpackaged/main/default/objects/Account/fields/iFit__c.field-meta.xml
<CustomField>
    <fullName>iFit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>iFit</label>
    <type>Checkbox</type>
</CustomField>