unpackaged/main/default/objects/Account/fields/Mahender__c.field-meta.xml
<CustomField>
    <fullName>Mahender__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mahender</label>
    <type>Checkbox</type>
</CustomField>