unpackaged/main/default/objects/Account/fields/My_Merge_Conflict_Example__c.field-meta.xml
<CustomField>
    <fullName>My_Merge_Conflict_Example__c</fullName>
    <label>My Merge Conflict Example</label>
    <length>100</length>
    <type>Text</type>
</CustomField>