unpackaged/main/default/objects/Account/fields/New_Dev2_Object__c.field-meta.xml
<CustomField>
    <fullName>New_Dev2_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Dev2 Object</label>
    <type>Checkbox</type>
</CustomField>