unpackaged/main/default/objects/Account/fields/NMDP_Demo__c.field-meta.xml
<CustomField>
    <fullName>NMDP_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NMDP Demo</label>
    <type>Checkbox</type>
</CustomField>