unpackaged/main/default/objects/Account/fields/Pipeline_Demo__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pipeline Demo</label>
    <type>Checkbox</type>
</CustomField>