unpackaged/main/default/objects/Account/fields/Text_100__c.field-meta.xml
<CustomField>
    <fullName>Text_100__c</fullName>
    <label>Text 100</label>
    <length>200</length>
    <type>Text</type>
</CustomField>