unpackaged/main/default/objects/Account/fields/Text_200__c.field-meta.xml
<CustomField>
    <fullName>Text_200__c</fullName>
    <label>Text Conflict</label>
    <length>200</length>
    <type>Text</type>
</CustomField>