unpackaged/main/default/objects/Account/fields/Text_Conflict__c.field-meta.xml
<CustomField>
    <fullName>Text_Conflict__c</fullName>
    <label>Text Conflict</label>
    <length>100</length>
    <type>Text</type>
</CustomField>