unpackaged/main/default/objects/Account/fields/Top_10__c.field-meta.xml
<CustomField>
    <fullName>Top_10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top 10</label>
    <type>Checkbox</type>
</CustomField>